Bug 329848 - Replace invalid transform-attribute parse error assertion by Error Console log r=bzbarsky,sr=tor